2015/FASE 1/JAVA/q-erradas-java/cor.txt
===
cor.java:3: error: class lapis_de_cor is public, should be declared in a file named lapis_de_cor.java
public class lapis_de_cor {
       ^
1 error